# tetraframe-dspy

./: .gitignore  README.md  pyproject.toml
configs/: anthropic.yaml  base.yaml  benchmarks.yaml  claude_code_cli.yaml  codex_cli.yaml  compile.yaml  hermes_default.yaml  mimo_v2_pro.yaml  openai.yaml  openai_compatible.yaml  opencode_cli.yaml  openrouter.yaml  openrouter_fast.yaml
examples/: benchmark_cases_dev.jsonl  benchmark_cases_test.jsonl  benchmark_cases_train.jsonl  sample_run.json
skills/tetraframe/: SKILL.md
src/tetraframe/: artifacts.py  cli.py  compile.py  config.py  dspy_compat.py  guards.py  metrics.py  modules.py  pipeline.py  signatures.py  tracing.py
src/tetraframe/backends/: __init__.py  api.py  base.py  cli_base.py  cli_claude.py  cli_codex.py  cli_opencode.py  dspy_adapter.py  factory.py
src/tetraframe/benchmarks/: __init__.py  harness.py
src/tetraframe/proxy/: __init__.py  client.py  server.py
src/tetraframe/tools/: __init__.py  api_tool.py  cli_tool.py  dspy_adapter.py  hermes_tool.py  protocol.py  registry.py
tests/: fixtures.py  test_artifacts.py  test_backends.py  test_benchmarks.py  test_dspy_compat.py  test_isolation.py  test_metrics.py  test_pipeline_execution.py  test_pipeline_smoke.py  test_proxy.py  test_tools.py
